--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lightspeed X (Vend) and Amazon Integration with SKUPlugs — The Complete Guide</title>
   <meta name="description" content="Seamlessly connect Lightspeed X (Vend) and Amazon with SKUPlugs to sync inventory, automate orders, and scale multichannel retail." />
+  <meta name="google-site-verification" content="G7AskmdteJMORw9l9AvufUdFWIx2nGpkjGsLYk1PWnk" />
   <style>
     /* --- Reset & base --- */
     :root{
